assets/css/scss/editor-style.scss
@import "abstracts/variables";
@import "abstracts/functions";
@import "abstracts/mixins";
@import "base/fonts";
@import "base/html";
@import "base/reset";
@import "base/normalize";
@import "base/media";
@import "base/typography";
@import "base/buttons";
@import "base/lists";
@import "base/tables";
@import "blocks/core/gallery/editor";
@import "blocks/core/quote/editor";

#tinymce {
	max-width: $layout-max-width;
	margin: 0 auto;
	padding: 1.4rem;

	.wp-caption-dd {
		font-size: $font-size-small;
		margin-top: add-unit($space-quarter, 'em');
	}
	

	@media screen and (min-width: 40em) {
		padding-left: 2.1rem;
		padding-right: 2.1rem;
	}

	@media screen and (min-width: 45em) {
		padding-left: 2.8rem;
		padding-right: 2.8rem;
	}
}

.wp-block {
	max-width: calc(800px - 2rem);
	
	@media screen and (min-width: 40em) {
		font-size: 1.1em;
	}

	@media screen and (min-width: 45em) {
		font-size: 1.2em;
	}
}

.wp-block .wp-block {
	font-size: inherit;
}

p {
	font-size: inherit;
	line-height: inherit;
}

.mce-content-body,
.editor-rich-text__tinymce {
	line-height: inherit;
}

.wp-block-heading h1.editor-rich-text__tinymce {
	font-size: 1.802em;
	line-height: line-height(1.802, 1.5);
}

.wp-block-heading h2.editor-rich-text__tinymce {
	font-size: 1.602em;
	line-height: line-height(1.602, 1.5);
}

.wp-block-heading h3.editor-rich-text__tinymce {
	font-size: 1.424em;
	line-height: line-height(1.424, 1.25);
}

.wp-block-heading h4.editor-rich-text__tinymce {
	font-size: 1.266em;
	line-height: line-height(1.266, 1.25);
}

.wp-block-heading h5.editor-rich-text__tinymce {
	font-size: 1.125em;
	line-height: line-height(1.125, 1);
}

.wp-block-heading h6.editor-rich-text__tinymce {
	font-size: 1em;
	line-height: line-height(1, 1);
}

button {
	overflow: hidden;
}

